--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/CSS/normalize.css" />
     <link rel="stylesheet" href="/CSS/reset.css" />
     <link rel="stylesheet" href="/CSS/grid.css" />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="/CSS/sobre.css" />
 
     <script defer src="main.js"></script>
   </head>
@@ -23,7 +24,7 @@
         </a>
         <nav class="grid-12 header_menu">
           <ul>
-            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="sobre.html" class="menu-ativo">Sobre</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="portfolio.html">Portfólio</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -33,94 +34,41 @@
     </header>
 
     <!-- HERO -->
-    <section class="introducao">
+    <section class="introducao-interna interna-sobre">
       <div class="container">
-        <h1 class="tracking-in-expand">Bicicletas Feitas a Mão</h1>
-        <blockquote class="quote-externo">
-          <p>
-            "não tenha nada em sua casa que você não considere ou acredita ser
-            bonito"
-          </p>
-          <cite>WILLIAM MORRIS</cite>
-        </blockquote>
-        <a href="produtos.html" class="btn scale-up-center">Orçamento</a>
+        <h1 class="tracking-in-expand">Sobre</h1>
+        <p>Conheça mais sobre a Bikcraft</p>
       </div>
     </section>
 
-    <!-- PRODUTOS -->
-    <section class="produtos">
-      <h2 class="subtitulo">PRODUTOS</h2>
-      <ul class="produtos_lista container">
-        <li class="grid-1-3 fade-left">
-          <div class="produtos_icone">
-            <img src="/img/produtos/passeio.svg" alt="Bikcraft Passeio" />
-          </div>
-          <h3>Passeio</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
-
-        <li class="grid-1-3 fade-in">
-          <div class="produtos_icone">
-            <img src="/img/produtos/esporte.svg" alt="Bikcraft Passeio" />
-          </div>
-          <h3>ESPORTE</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
-        <li class="grid-1-3 fade-in-right scale">
-          <div class="produtos_icone">
-            <img src="/img/produtos/retro.svg" alt="Bikcraft Passeio" />
-          </div>
-          <h3>RETRO</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
-      </ul>
-
-      <div class="call">
-        <p>Clique aqui e veja os detalhes dos produtos</p>
-        <a href="produtos.html" class="btn btn-black">PRODUTOS</a>
+    <!-- MISSÃO -->
+    <section class="missao-sobre container">
+      <div class="grid-10">
+        <h2 class="subtitulo-interno">HISTÓRIA, MISSÃO E VISÃO</h2>
+        <p>
+          No mundo atual, a continua expansão de nossa atividade cumpre um papel
+          essencial na formulação da gestão inovadora da qual fazemos parte.
+        </p>
+        <p>
+          No mundo atual, a continua expansão de nossa atividade cumpre um papel
+          essencial na formulação da gestão inovadora da qual fazemos parte.
+        </p>
       </div>
-    </section>
-
-    <!-- PORTFOLIO -->
-    <section class="portfolio js-scroll">
-      <div class="container">
-        <h2 class="subtitulo">PORTFÓLIO</h2>
-        <ul class="portfolio-lista">
-          <li class="grid-8">
-            <img
-              class="rotate-in-2-bck-cw"
-              src="img/portfolio/retro.jpg"
-              alt="Bike Retro"
-            />
-          </li>
-          <li class="grid-8">
-            <img
-              class="rotate-in-2-tr-ccw"
-              src="img/portfolio/passeio.jpg"
-              alt="Bike Passeio"
-            />
-          </li>
-          <li class="grid-16">
-            <img
-              class="fade-in"
-              src="img/portfolio/esporte.jpg"
-              alt="Bike Esporte"
-            />
-          </li>
+      <div class="grid-6">
+        <h2 class="subtitulo-interno">VALORES</h2>
+        <ul>
+          <li>-Qualidade no processo</li>
+          <li>-Foco no cliente</li>
+          <li>-Diversão, preservando a natureza</li>
+          <li>-Sustentabilidade</li>
         </ul>
-        <div class="call">
-          <p>Conheça mais o nosso Portfólio</p>
-          <a href="portfolio.html" class="btn">PORTFÓLIO</a>
-        </div>
+      </div>
+      <div class="grid-16 foto-equipe">
+        <img
+          class="scale-in-hor-center"
+          src="img/equipe-bikcraft.jpg"
+          alt="Equipe Bikcraft"
+        />
       </div>
     </section>
 
@@ -161,17 +109,6 @@
       </div>
     </section>
 
-    <!-- QUEBRA -->
-    <section class="quebra js-scroll">
-      <blockquote class="quote-externo container">
-        <p>
-          "o verdadeiro segredo da felicidade está em ter um genuíno interesse
-          por todos os detalhes da vida cotidiana."
-        </p>
-        <cite>WILLIAM MORRIS</cite>
-      </blockquote>
-    </section>
-
     <!-- FOOTER -->
     <footer>
       <div class="footer">
@@ -201,6 +138,7 @@
                 <a class="scale" href="http://facebook.com" target="_blank"
                   ><img
                     src="img/redes-sociais/facebook.svg"
+                    class="scale-in-hor-center"
                     alt="Facebook Bikecraft"
                 /></a>
               </li>
