--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="/CSS/reset.css" />
     <link rel="stylesheet" href="/CSS/grid.css" />
     <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="stylesheet" href="CSS/media-querie.css" />
+    <link rel="stylesheet" href="CSS/media-querie.css">
+
 
     <script defer src="main.js"></script>
   </head>
@@ -26,7 +27,7 @@
           <ul>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="portfolio.html">Portfólio</a></li>
+            <li><a href="portfolio.html" class="menu-ativo">Portfólio</a></li>
             <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
@@ -34,67 +35,28 @@
     </header>
 
     <!-- HERO -->
-    <section class="introducao">
+    <section class="introducao-interna interna-portfolio">
       <div class="container">
-        <h1 class="tracking-in-expand">Bicicletas Feitas a Mão</h1>
-        <blockquote class="quote-externo">
-          <p>
-            "não tenha nada em sua casa que você não considere ou acredita ser
-            bonito"
-          </p>
-          <cite>WILLIAM MORRIS</cite>
-        </blockquote>
-        <a href="produtos.html" class="btn scale-up-center">Orçamento</a>
-      </div>
+        <h1 class="tracking-in-expand">PORTFÓLIO</h1>
+        <p>Conheça os projetos que amamos mostrar</p>
     </section>
 
-    <!-- PRODUTOS -->
-    <section class="produtos">
-      <h2 class="subtitulo">PRODUTOS</h2>
-      <ul class="produtos_lista container">
-        <li class="grid-1-3 fade-left">
-          <div class="produtos_icone">
-            <img src="/img/produtos/passeio.svg" alt="Bikcraft Passeio" />
-          </div>
-          <h3>Passeio</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
+    <!-- CLIENTES -->
 
-        <li class="grid-1-3 fade-in">
-          <div class="produtos_icone">
-            <img src="/img/produtos/esporte.svg" alt="Bikcraft Passeio" />
-          </div>
-          <h3>ESPORTE</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
-        <li class="grid-1-3 fade-in-right scale">
-          <div class="produtos_icone">
-            <img src="/img/produtos/retro.svg" alt="Bikcraft Passeio" />
-          </div>
-          <h3>RETRO</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
-      </ul>
-
-      <div class="call">
-        <p>Clique aqui e veja os detalhes dos produtos</p>
-        <a href="produtos.html" class="btn btn-black">PRODUTOS</a>
-      </div>
+    <section class="container">
+      <blockquote class="quote-clientes">
+        <p>
+          "No mundo atual, a contínua expansao de nossa atividade cumpre um
+          papel essencial na formulação da gestão inovadora da qual fazemos
+          parte."
+        </p>
+        <cite>Barbara Moss</cite>
+      </blockquote>
     </section>
 
     <!-- PORTFOLIO -->
     <section class="portfolio js-scroll">
       <div class="container">
-        <h2 class="subtitulo">PORTFÓLIO</h2>
         <ul class="portfolio-lista">
           <li class="grid-8">
             <img
@@ -118,47 +80,6 @@
             />
           </li>
         </ul>
-        <div class="call">
-          <p>Conheça mais o nosso Portfólio</p>
-          <a href="portfolio.html" class="btn">PORTFÓLIO</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- QUALIDADE -->
-    <section class="qualidade container js-scroll">
-      <h2 class="subtitulo">QUALIDADE</h2>
-      <img
-        src="img/bikcraft-qualidade.svg"
-        alt="Bikcraft"
-        style="display: block"
-      />
-      <ul class="qualidade_lista">
-        <li class="grid-1-3">
-          <h3>Durabilidade</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
-        <li class="grid-1-3">
-          <h3>Design</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
-        <li class="grid-1-3">
-          <h3>Sustentabilidade</h3>
-          <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação.
-          </p>
-        </li>
-      </ul>
-      <div class="call">
-        <p>Conheça mais a nossa história</p>
-        <a href="sobre.html" class="btn btn-black">SOBRE</a>
       </div>
     </section>
 
