--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="/CSS/grid.css" />
     <link rel="stylesheet" href="CSS/style.css" />
     <link rel="stylesheet" href="CSS/media-querie.css">
-
-
-    <script defer src="main.js"></script>
+  
   </head>
 
   <body>
@@ -43,7 +41,7 @@
 
     <!-- CLIENTES -->
 
-    <section class="container">
+    <section class="container" data-slide="quote">
       <blockquote class="quote-clientes">
         <p>
           "No mundo atual, a contínua expansao de nossa atividade cumpre um
@@ -52,10 +50,23 @@
         </p>
         <cite>Barbara Moss</cite>
       </blockquote>
+      <blockquote class="quote-clientes">
+        <p>
+          "Nada melhor do que dar um rolê com minha bikcraft na orla.
+          Essa é a minha companheira mais fiel, está sempre a minha disposição"
+        </p>
+        <cite>Pedro Mota</cite>
+      </blockquote>
+      <blockquote class="quote-clientes">
+        <p>
+          "Aqueles que ainda não possuem uma bikcraft, não sabem o que estão perdendo. A precisão é absurda e a velocidade transcendental, nunca vi nada igual."
+        </p>
+        <cite>Johnny Rivers</cite>
+      </blockquote>
     </section>
 
     <!-- PORTFOLIO -->
-    <section class="portfolio js-scroll">
+    <section class="portfolio">
       <div class="container">
         <ul class="portfolio-lista">
           <li class="grid-8">
@@ -153,5 +164,8 @@
         </div>
       </div>
     </footer>
+    <script src="main.js"></script>
+    <script src="./js/simple-slide.js"></script>
+     <script src="./js/script.js"></script>
   </body>
 </html>
