--- a/index.html
+++ b/index.html
@@ -48,6 +48,32 @@
       </div>
     </section>
 
+    <section class="container" data-slide="quote">
+      <blockquote class="quote-clientes">
+        <p>
+          "No mundo atual, a contínua expansao de nossa atividade cumpre um
+          papel essencial na formulação da gestão inovadora da qual fazemos
+          parte."
+        </p>
+        <cite>Barbara Moss</cite>
+      </blockquote>
+      <blockquote class="quote-clientes">
+        <p>
+          "Nada melhor do que dar um rolê com minha bikcraft na orla. Essa é a
+          minha companheira mais fiel, está sempre a minha disposição"
+        </p>
+        <cite>Pedro Mota</cite>
+      </blockquote>
+      <blockquote class="quote-clientes">
+        <p>
+          "Aqueles que ainda não possuem uma bikcraft, não sabem o que estão
+          perdendo. A precisão é absurda e a velocidade transcendental, nunca vi
+          nada igual."
+        </p>
+        <cite>Johnny Rivers</cite>
+      </blockquote>
+    </section>
+
     <!-- PRODUTOS -->
     <section class="produtos">
       <h2 class="subtitulo">PRODUTOS</h2>
@@ -233,4 +259,7 @@
       </div>
     </footer>
   </body>
+
+  <script src="./js/simple-slide.js"></script>
+  <script src="./js/script.js"></script>
 </html>
