--- a/contato.html
+++ b/contato.html
@@ -39,7 +39,7 @@
     <section class="introducao-interna interna-contato">
       <div class="container">
         <h1 class="tracking-in-expand">CONTATO</h1>
-        <p>Fale conosco</p>
+        <p class="fade-in-top">Fale conosco</p>
       </div>
     </section>
 
