--- a/sobre.html
+++ b/sobre.html
@@ -43,7 +43,7 @@
     </section>
 
     <!-- MISSÃO -->
-    <section class="missao-sobre container">
+    <section class="missao-sobre container fade-in-top">
       <div class="grid-10">
         <h2 class="subtitulo-interno">HISTÓRIA, MISSÃO E VISÃO</h2>
         <p>
