--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,12 @@
     <section class="introducao-interna interna-portfolio">
       <div class="container">
         <h1 class="tracking-in-expand">PORTFÓLIO</h1>
-        <p>Conheça os projetos que amamos mostrar</p>
+        <p class="fade-in-top">Conheça os projetos que amamos mostrar</p>
     </section>
 
     <!-- CLIENTES -->
 
-    <section class="container" data-slide="quote">
+    <section class="container fade-in-top" data-slide="quote">
       <blockquote class="quote-clientes">
         <p>
           "No mundo atual, a contínua expansao de nossa atividade cumpre um
@@ -67,7 +67,31 @@
 
     <!-- PORTFOLIO -->
     <section class="portfolio">
-      <div class="container">
+      <div class="container" data-slide="portfolio">
+        <ul class="portfolio-lista">
+          <li class="grid-8">
+            <img
+              class="rotate-in-2-tr-ccw"
+              src="img/portfolio/passeio.jpg"
+              alt="Bike Passeio"
+            />
+          </li>
+          <li class="grid-8">
+            <img
+              class="rotate-in-2-bck-cw"
+              src="img/portfolio/retro.jpg"
+              alt="Bike Retro"
+            />
+          </li>
+          <li class="grid-16">
+            <img
+              class="fade-in"
+              src="img/portfolio/esporte.jpg"
+              alt="Bike Esporte"
+            />
+          </li>
+        </ul>
+
         <ul class="portfolio-lista">
           <li class="grid-8">
             <img
@@ -91,6 +115,7 @@
             />
           </li>
         </ul>
+        
       </div>
     </section>
 
