--- a/produtos.html
+++ b/produtos.html
@@ -38,13 +38,13 @@
     <section class="introducao-interna interna-produtos">
       <div class="container">
         <h1 class="tracking-in-expand">Produtos</h1>
-        <p>Conheça os nossos produtos</p>
+        <p class="fade-in-top">Conheça os nossos produtos</p>
       </div>
     </section>
 
     <!-- PRODUTOS -->
     <section class="container produtos-item js-scroll">
-      <div class="grid-11">
+      <div class="grid-11 fade-in-top">
         <img src="img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft Passeio" />
         <h2>Passeio</h2>
       </div>
